--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,9 @@
     margin-top: 16px;
 }
 
+
 .stepper-label {
+    padding: 10px 0;
     color: black;
     font-size: x-large;
     font-weight: 500;
@@ -56,4 +58,26 @@ hr.solid {
 .title{
     font-size: large;
     font-weight: 500;
+}
+
+.last-section {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+}
+
+input,
+textarea {
+    width: 90px;
+    padding: 3px;
+    font-family: 'Roboto';
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+
+.email-slot,.comment-slot{
+    width: 100%;
+    padding: 5px;
+    border: 2px solid #ccc;
 }
